docs: I'm working on a function to make the first letters of the weather, uppercase.

--- a/website/index.html
+++ b/website/index.html
@@ -11,10 +11,11 @@
 </head>
 
 <body>
+    <h1 id="main_title">Weather Journal</h1>
     <div id="interaction_container">
-        <input id="zip" placeholder="enter zip code here"></input>
-        <textarea id="feelings"></textarea>
-        <button id="generate">Current Weather</button>
+        <input id="zip" placeholder="enter zip code"></input>
+        <textarea id="feelings" placeholder="How are you today?"></textarea>
+        <button id="generate">Get Weather</button>
     </div>
 
 </body>
