docs: I have finished styling my project.

--- a/website/index.html
+++ b/website/index.html
@@ -13,7 +13,7 @@
 <body>
     <h1 id="main_title">Weather Journal</h1>
     <div id="interaction_container">
-        <input id="zip" placeholder="enter zip code"></input>
+        <input id="zip" placeholder="Enter zip code"></input>
         <textarea id="feelings" placeholder="How are you today?"></textarea>
         <button id="generate">Get Weather</button>
     </div>
